--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/image-edge": "^1.0.0-27840416.dc1ed65",
     "@nuxtjs/tailwindcss": "^6.1.3",
-    "nuxt": "3.0.0"
+    "howler": "^2.2.3",
+    "nuxt": "^3.0.0",
+    "nuxt-headlessui": "^1.0.1",
+    "nuxt-icon": "^0.1.8"
   },
   "dependencies": {
-    "@nuxt/image-edge": "^1.0.0-27840416.dc1ed65",
-    "howler": "^2.2.3"
+    "@headlessui/vue": "^1.7.7"
   }
 }
