--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@nuxt/image-edge": "^1.0.0-27840416.dc1ed65",
+    "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.1.3",
     "howler": "^2.2.3",
     "nuxt": "^3.0.0",
@@ -16,6 +17,7 @@
     "nuxt-icon": "^0.1.8"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.7"
+    "@headlessui/vue": "^1.7.7",
+    "preline": "^1.6.0"
   }
 }
